# greetings_rust

./: .dockerignore  .drone.yml  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  Justfile.docker  Readme.md  default_greeting_config.json  default_survey_config.json
pipeline_scripts/: docker-build-app.sh  docker-push-app.sh
src/: app.rs  env.rs  main.rs  routes.rs  template.rs
src/templates/: askama.rs  mod.rs
templates/: base.html  greeting.html  index.html  survey.html
