[package]
name = "greetings_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
lipsum = "0.8"
askama = "0.11"
envy = "0.4"
serde="1.0"
flexi_logger = { version = "0.22", default_features = false }
log = "0.4"
serde_json = "1"
thiserror = "1"