[package]
name = "greetings_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
# core
actix-web = "3"
actix-files = "0.5.0"
# serialization
serde="1.0"
serde_json = "1"
envy = "0.4"
# templates
askama = "0.11"  # for page static templates
handlebars = "4"  # for user dynamic templates
# observability 
flexi_logger = "0.22"
log = "0.4"
# errors
thiserror = "1"
anyhow = "1"
# sql
sqlx = {version = "0.5", features = [ "runtime-actix-rustls", "sqlite" ]}
# other
lipsum = "0.8"  # random name generation